added content to all subpages
Added full content to Lessons 1-4, 'About' page, and 'Learners' page

--- a/about.html
+++ b/about.html
@@ -26,19 +26,43 @@
 <md>
 # About this Series
 
-<div class="flex-container">
+<!--<div class="flex-container">
  <img src="./images/banner-1.png" class="shrinkToFit" width="100%" style="border:2px solid #332241; border-radius: 15px;">
-</div>
+</div>-->
+
+<br>
 
 
+I’ve long been fascinated by the string trick, demonstrated in the introduction video, and for years I've been wanting to put together an explainer on it. 
+
+
+
+But the real impulse for this series emerged in 2019 during a theater workshop by the group <a href="https://en.wikipedia.org/wiki/Kalakshetra_Manipur" style="margin: 0;">Kalakshetra Manipur</a>.  Their performance tradition is based on the idea that many natural body movements are based on *figure-8* motions, and that figure-8 movements allow us to smoothly transition from movement to stillness.  This idea struck me as a  very nice way to describe the homotopy in SO(3) from a 720° loop to a stationary loop.  
+
+I was also working extensively with puppets at the time, so this sparked off the idea of exploring SO(3) using a spherical puppet, and very directly building loops and certain homotopies of loops, through movement sequences.
+
+
+At the <a href="https://math.iitm.ac.in/public_html/forays/index.html" style="margin: 0;">*Forays*</a> program at IIT Madras in February 2020, I ran the first version of this workshop, which consisted of the seven movement puzzles of Lesson Two using the puppet Bala.  Soon after, I gave the same workshop to a group of contemporary dancers from Bangalore, who caught on to the ideas very quickly, despite having no mathematics training post high school.  One of the dancers, <a href="https://www.instagram.com/joshuasailo/" style="margin: 0;">Joshua Sailo</a>, was so fascinated by these ideas that he invited me to take part in a Math-Dance collaboration, which we later called <a href="https://youtu.be/Zc1qVdLv-hM" style="margin: 0;">*The Life Cycle of a Trivial Loop*</a>. 
+
+ 
+
+Since then, I've run several more in-person workshops, including for <a href="https://www.imsc.res.in/outreach/facets2022/" style="margin: 0;">Facets 2022 @IMSc</a> , and for the <a href="https://azimpremjiuniversity.edu.in/math-club" style="margin: 0;">Azim Premji University Math Club</a>. Each time new and exciting discoveries have been made, and it's been a lot of fun for everyone involved.  
+
+This current video series is an experiment  aiming to bring that sense of discovery to the online medium, created in collaboration with <a href="https://nptel.ac.in/" style="margin: 0;">NPTEL</a>.  
+
+
+
+# Credits
+
+Several others helped with the introduction video: the movement demonstrations were done by Aditi Bheda and Sharan Devkar Shankar, the background art was done by Pranav Sreerag, and the cinematography was done by Sharan Devkar Shankar and Sushmita Venugopalan.  Everything (with the exception of the string trick) was filmed at the NPTEL studio at IIT Madras, with help from Ravichandran.
+
+There have been many iterations of this workshop, so I'd like to thank everyone who contributed to each stage of its creation.   In particular, thank you Anushka Meenakshi, Disha Kuzhively, and Divakaran Divakaran for playing Bala's *god of death* in an opening skit that was previously part of the workshop!  Thank you Kalakshetra Manipur for the excellent theater workshop that led to this project.  And thank you, Joshua Sailo, for reaching out and co-creating *The Life Cycle of a Trivial Loop*! 
+
+Special thanks to Aatish Bhatia, Dan Krol, Sharan Devkar Shankar, Sushmita Venugopalan, and the participants of the  various versions of this workshop, for extremely useful conversations and feedback.
 </md>
 
-<p> Coming Soon!  Contents will be posted by January 1st, 2024. </p>
 
 
-<div class="flex-container">
- <img src="./images/coming-soon.jpg" class="shrinkToFit" width="660" style="border:2px solid black">
-</div>
 
 
 
