--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
  <img src="./images/banner-0.png" class="shrinkToFit" width="100%" style="border:2px solid #332241; border-radius: 15px;">
 </div>
 
-Welcome to The Topology of Movement!  To get started, you can watch the Introduction video below:
+
+Welcome to The Topology of Movement, a free online workshop in which we explore spatial orientation, 3-D rotations, and the quaternion numbers through movement, puppetry, and Blender.
+
+To get started, you can watch the introduction below:
 
 <div class="video-container">
   <iframe
@@ -41,7 +44,8 @@ Welcome to The Topology of Movement!  To get started, you can watch the Introduc
   </iframe>
 </div>
 
-This minicourse is organized into four lessons, each of which can be completed in 30 minutes to an hour.  It is free of charge and open to everyone.
+The workshop is free of charge and open to everyone!  It can be completed in anywhere from one hour to four hours, depending on your pace and how far you wish to go.
+
 
 Click below for the first lesson, or scroll down for the table of contents:
 
@@ -76,10 +80,10 @@ Click below for the first lesson, or scroll down for the table of contents:
 
 <md>
 
-Wondering how to use this video series? In this <a href="./learners.html" style="margin: 0;"> note for learners</a>, we describe potential pathways through these videos, based on your background and your interests. 
+Wondering how to use this video series? In this <a href="./learners.html" style="margin: 0;"> note for learners</a>, we summarize the content and describe potential pathways through these videos, based on your background and your interests. 
 
-
-Are you an educator? In this <a href="./teachers.html" style="margin: 0;"> note for teachers</a>, we describe ways the activities in this series can be incorporated into more standard courses.
+<!--
+Are you an educator? In this <a href="./teachers.html" style="margin: 0;"> note for teachers</a>, we describe ways the activities in this series can be incorporated into more standard courses.-->
 
 Curious about the how this series came about?  I've added a brief <a href="./about.html" style="margin: 0;">'About' page</a> which might answer some of your questions.
 </md>
