--- a/learners.html
+++ b/learners.html
@@ -26,19 +26,31 @@
 <md>
 # A Note for Learners
 
-<div class="flex-container">
+<!--<div class="flex-container">
  <img src="./images/banner-1.png" class="shrinkToFit" width="100%" style="border:2px solid #332241; border-radius: 15px;">
-</div>
+</div>-->
 
+
+<br>
+
+My hope is that everyone can find something interesting in this video series, but you can pick your pathway based on your mathematical background and interests.
+
+So far, I've run this workshop with groups of high school students, college students, PhD students, and even mathematics professors.  I've also run it with contemporary dancers, puppeteers, and game developers, who have had little formal mathematics training after high school.
+
+In <a href="./lesson-1.html" style="margin: 0;">Lesson One</a>, we explore basic properties of spatial orientations and rotations.  If you're already familiar with 3-D rotations, or if you're eager to get to the movement-based puzzles, you can safely skip this section.
+
+In <a href="./lesson-2.html" style="margin: 0;">Lesson Two</a>, we carry out a novel movement-based approach to understanding the *shape* of the set of spatial orientations, using a simple puppet. I haven't seen this approach elsewhere, but I feel it leads to very useful insights, which are often skipped in standard treatments.
+
+The first two lessons tell a complete story, without any explicit pre-requisites.  If you do not want to see any algebra then you can finish here and feel satisfied!  
+
+On the other hand, if you are somewhat mathematically inclined, or have an interest in coding, computer graphics, or robotics, you can continue onwards. In Lessons Three and Four, we assume some familiarity with complex numbers and matrix multiplication, and situate the discoveries from the first two lessons in a broader mathematical landscape.
+
+In <a href="./lesson-3.html" style="margin: 0;">Lesson Three</a>, we introduce the quaternion number system, an extension of the real numbers whose algebraic structure perfectly captures the behavior of spatial rotations.  The quaternions give us a symbolic language for writing down all of our discoveries from the previous lessons, and even help us discover new relationships that are virtually impossible to discover purely through movement.
+
+In <a href="./lesson-4.html" style="margin: 0;">Lesson Four</a>, we use quaternions to parametrize the loops and homotopies from Lesson Two, which we then feed to the open-source 3-D animation software Blender, to create some neat animations.  We also investigate how quaternions transform 3-D space, and using Blender we see how even infinitesimal rotations are entangled.
 
 </md>
 
-<p> Coming Soon!  Contents will be posted by January 1st, 2024. </p>
-
-
-<div class="flex-container">
- <img src="./images/coming-soon.jpg" class="shrinkToFit" width="660" style="border:2px solid black">
-</div>
 
 
 
